@@ -37,6 +37,8 @@
 #
 # CONFIG_ARCH - identifies the arch subdirectory
 # CONFIG_ARCH_name - for use in C code
+# CONFIG_BOARD - identifies the configs subdirectory
+# CONFIG_BARD_name - for use in C code
 # CONFIG_ROM_VECTORS - unique to c5471
 # CONFIG_DRAM_END - the size of installed DRAM.
 #   Unique to c5471
@@ -45,6 +47,8 @@
 #
 CONFIG_ARCH=c5471
 CONFIG_ARCH_C5471=y
+CONFIG_BOARD=c5471evm
+CONFIG_BOARD_C5471EVM=y
 CONFIG_ROM_VECTORS=n
 CONFIG_DRAM_END=0x11000000
 CONFIG_C5471_LEDS=y
