@@ -47,7 +47,7 @@ ARCHPICFLAGS		= -pic
 ARCHWARNINGS		= -Wall -Wstrict-prototypes -Wshadow
 ARCHDEFINES		=
 ARCHINCLUDES		= -I. -isystem $(TOPDIR)/include
-ARCHSCRIPT		= -T$(TOPDIR)/configs/m68332evb/ld.script
+ARCHSCRIPT		= -T$(TOPDIR)/configs/$(CONFIG_BOARD)/ld.script
 
 CROSSDEV		= m68k-elf-
 CC			= $(CROSSDEV)gcc
